# CGHomework

./: .gitignore  CMakeLists.txt  README  br  build.sh  cgHW.rar  test.obj.bac
include/: Edge.h  LinePair.h  MainWidget.h  Polygon.h  ScanLineZBuffer.h  \  cgtype.h  objloader.h
src/: CMakeLists.txt  Edge.cpp  LinePair.cpp  MainWidget.cpp  Polygon.cpp  ScanLineZBuffer.cpp  main.cpp  objloader.cpp
